# fastapi_hf_endpoints

./: Dockerfile  README.md  pyproject.toml
inference/: loading.py  server.py  structs.py
